# gpui-anim

./: Cargo.toml  DESIGN.md  README.md  REFACTOR.md  flake.nix
examples/: click.rs  custom_state.rs  hover.rs  hover_click_combo.rs  multi_elements.rs  nested_priority.rs
src/: api.rs  core.rs  interpolate.rs  lib.rs  transition.rs
src/api/: types.rs  wrapper.rs
src/core/: engine.rs  metrics.rs  policies.rs  scheduler.rs  state.rs
src/interpolate/: generic.rs  gpui_adapters.rs  traits.rs
src/transition/: curves.rs
